# webgl-shader

./: .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/lib/client/: cube-def.ts  cube-rotating.ts  cube-texture.ts  image-processing.ts  webgl-common.ts  whiteboard2d.ts
src/lib/components/: GlCanvas.svelte  Slider.svelte
src/lib/shaders/: 1_4_hsv.glsl  1_4_polar-rot.glsl  1_4_polar.glsl  2_2_hash1d.glsl  2_3_hash2d3d.glsl  3_0_value_noise.glsl  3_1_vnoise_grid.glsl  4_0_grad_noise.glsl  4_1_value_range.glsl  4_2_rot_noise.glsl  blending.glsl  bool.glsl  cellular_noise.glsl  conversion.glsl  dist_first.glsl  dist_first_grad.glsl  dist_first_improved.glsl  domain_warping.glsl  domain_warping_rot.glsl  frac_brownian_motion.glsl  fragment_test_uniform.glsl  grad_noise_artifact.glsl  mouse.glsl  periodic_perlin_noise.glsl  perlin_noise.glsl  reference.glsl  vertex_common.glsl  voronoi.glsl
src/lib/wasm/: Cargo.toml  README.md
src/lib/wasm/src/: lib.rs  utils.rs  webgl.rs
src/lib/wasm/src/examples/: clip_space.rs  colored_square.rs  colored_square_rotate.rs  mod.rs  mouse.rs  rotating_cube.rs  rotating_square.rs
src/lib/wasm/src/rtg/: a_hello_world.rs  gl_box.rs  mod.rs
src/routes/: +layout.svelte  +page.svelte  styles.css
src/routes/gallery/: +page.svelte
src/routes/real-time-graphics/: +page.svelte
src/routes/real-time-graphics/bilerp/: +page.svelte
src/routes/real-time-graphics/gnoise-range/: +page.svelte
src/routes/sverdle/: +page.server.ts  +page.svelte
src/routes/tutorials/: +page.svelte
(+24 files in other folders)
