[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
nalgebra-glm = "0.17.0"
js-sys = "0.3.60"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",
]
